force-app/main/default/objects/apxio__Class__c/fields/apxio__Course__c.field-meta.xml
<CustomField>
    <fullName>apxio__Course__c</fullName>
    <description>The course being offered as a class</description>
    <label>Course</label>
    <referenceTo>apxio__Course__c</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>