force-app/main/default/objects/apxio__Class__c/fields/apxio__Offered_Semester__c.field-meta.xml
<CustomField>
    <fullName>apxio__Offered_Semester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The offered semester this offered class is a part of</description>
    <label>Offered Semester</label>
    <referenceTo>apxio__Offered_Semester__c</referenceTo>
    <relationshipName>Offered_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>